[package]
name = "wl-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.1.21"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }
wl-bindgen = { path = "../wl-bindgen" }
